# mongomv

./: .gitignore  LICENCE  README.md  docker-compose-dev.yml  docker-compose.yml  makefile  pyproject.toml
mongomv/: __init__.py
mongomv/client/: __init__.py  sync_client.py
mongomv/core/: __init__.py  entity.py
mongomv/reposiroty/: repo.py
mongomv/repository/: repo.py  unit_of_work.py
mongomv/schemas/: __init__.py  entities.py  enums.py  misc.py  models.py
mongomv/services/: __init__.py  crud.py  misc.py  mongodb_service.py
mongomv/utils/: __init__.py  deco.py
tests/: conftest.py  test_experiments.py  test_gridfs.py  test_meta.py  test_models.py  test_mongomv_client.py
