[tool.poetry]
name = "mongomv"
version = "0.2.0.post2"
description = "Fast framework for model versioning"
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mongomv"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.3"
pydantic = "^2.6.4"


[tool.poetry.group.test.dependencies]
ruff = "^0.3.5"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"


[tool.pytest.ini_options]
addopts = "--ignore=pgdata -p no:warnings"
pythonpath = [
  ".", "mongomv",
]
asyncio_mode="auto"


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = [
  "C901", "B006", "B904"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
